lib/jazz.sample/src/jazz/sample/error/lib.jazz
;;;==============
;;;  JazzScheme
;;;==============
;;;
;;;; lib
;;;


(library jazz.sample.error.lib jazz


(definition public Yo
  #f))
